<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textuserName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/username"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsername2"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textuserName2"
        app:layout_constraintStart_toEndOf="@+id/textuserName2" />

    <TextView
        android:id="@+id/textdob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/dob"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textuserName2" />

    <EditText
        android:id="@+id/inputDob2"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textdob2"
        app:layout_constraintStart_toEndOf="@+id/textdob2" />

    <TextView
        android:id="@+id/textpassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/password"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdob2" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="34dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textpassword2"
        app:layout_constraintStart_toEndOf="@+id/textpassword2" />

    <TextView
        android:id="@+id/textgender2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/gender"
        android:textColor="#070707"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpassword2" />

    <RadioButton
        android:id="@+id/radioMale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:text="@string/male"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textgender2"
        app:layout_constraintStart_toEndOf="@+id/textgender2" />

    <RadioButton
        android:id="@+id/radioFemale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/female"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioMale2"
        app:layout_constraintStart_toEndOf="@+id/radioMale2" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="44dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioMale2" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="44dp"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@+id/btn_edit"
        app:layout_constraintTop_toBottomOf="@+id/radioFemale2" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputUsername2"
        app:layout_constraintStart_toEndOf="@+id/inputUsername2" />

    <TextView
        android:id="@+id/textId2"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/inputDob2"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

</androidx.constraintlayout.widget.ConstraintLayout>