<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileManagement">

    <TextView
        android:id="@+id/textuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/username"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textuserName"
        app:layout_constraintStart_toEndOf="@+id/textuserName" />

    <TextView
        android:id="@+id/textdob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/dob"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textuserName" />

    <EditText
        android:id="@+id/inputDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textdob"
        app:layout_constraintStart_toEndOf="@+id/textdob" />

    <TextView
        android:id="@+id/textpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/password"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdob" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textpassword"
        app:layout_constraintStart_toEndOf="@+id/textpassword" />

    <TextView
        android:id="@+id/textgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/gender"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpassword" />

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:text="@string/male"
        app:layout_constraintBaseline_toBaselineOf="@+id/textgender"
        app:layout_constraintStart_toEndOf="@+id/textgender" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/female"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioMale"
        app:layout_constraintStart_toEndOf="@+id/radioMale" />

    <Button
        android:id="@+id/btn_updateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="186dp"
        android:layout_marginTop="44dp"
        android:text="@string/updateProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioMale" />

</androidx.constraintlayout.widget.ConstraintLayout>