<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textuserNamemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="306dp"
        android:text="@string/username"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsernamemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textuserNamemain"
        app:layout_constraintStart_toEndOf="@+id/textuserNamemain" />

    <TextView
        android:id="@+id/textpasswordmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:text="@string/password"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textuserNamemain" />

    <EditText
        android:id="@+id/inputPasswordmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textpasswordmain"
        app:layout_constraintStart_toEndOf="@+id/textpasswordmain" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="243dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpasswordmain" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:text="@string/register"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>